# edutoria_task

./: .gitignore  README.md  main.py  manage.py  pyproject.toml
app/executor/: executor.py
app/interpreter/: interpreter.py
app/interpreter/runner/: __init__.py  base.py  console_runner.py
app/lexer/: __init__.py  base.py  lexer.py
app/parser/: __init__.py  base.py  parser.py
tests/: test_executor.py  test_lexer.py  test_parser.py
