[tool.poetry]
name = "edutoria-task"
version = "0.1.0"
description = ""
authors = ["vladimir titov <vladimir.titov@fingular.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
